--- a/public/index.html
+++ b/public/index.html
@@ -143,7 +143,7 @@
       </div>
 
       <div class="card">
-        <img src="assets\close-up-young-business-person-doing-internship.jpg" id="img2" alt="Service 2">
+        <img src="/assets\close-up-young-business-person-doing-internship.jpg" id="img2" alt="Service 2">
         <h3>Custom Development</h3>
         <p>Ensure the successful delivery of tailored technology.</p>
         <a href="#">Read More →</a>
@@ -156,7 +156,7 @@
       </div>
 
       <div class="card">
-  <img src="assets\close-up-young-business-person-doing-internship.jpg" id="img4" alt="Service 4">
+  <img src="./assets\close-up-young-business-person-doing-internship.jpg" id="img4" alt="Service 4">
   <h3>Custom Development</h3>
   <p>Ensure the successful delivery of tailored technology.</p>
   <a href="#">Read More →</a>
