--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
   <header>
     <div class="logo-container">
-      <img  class="logo-img" src="assets/vdv fulllogo.png" alt="Vinayaka Digiverse Logo" />
+      <img  class="logo-img" src="public/vdv fulllogo.png" alt="Vinayaka Digiverse Logo" />
     </div>
 
 <nav>
