--- a/public/index.html
+++ b/public/index.html
@@ -15,25 +15,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-<style>
-    body {
-      overflow-x: hidden;
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-    }
 
-    @media (max-width: 768px) {
-      .hero {
-        flex-direction: column;
-        text-align: center;
-      }
-    }
-  </style>
 </head>
 <body>
-
+  <div class="scale-wrapper">
   <header>
     <div class="logo-container">
       <img  class="logo-img" src="assets/vdv fulllogo.png" alt="Vinayaka Digiverse Logo" />
@@ -656,8 +641,7 @@ that meet your business needs.
     </div></a>
   </div>
 </footer>
-
-
-
+    
+ </div>
 </body>
 </html>
