--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
     </div>
 
 <nav>
-  <ul class="navbar">
+   <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+  <ul class="navbar" id = "navbar">
     <li><a href="index.html">Home</a></li>
     <li><a href="about-us.html">About Us</a></li>
 
@@ -636,5 +637,13 @@ that meet your business needs.
     </div></a>
   </div>
 </footer>
+<script>
+  function toggleMenu() {
+    const nav = document.getElementById("navbar");
+    nav.classList.toggle("active");
+  }
+</script>
+
+  
 </body>
 </html>
