--- a/public/index.html
+++ b/public/index.html
@@ -12,86 +12,66 @@
  
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 <style>
-    /* HAMBURGER MENU */
-    .menu-toggle {
-      display: none;
-      font-size: 28px;
-      color: white;
-      cursor: pointer;
-    }
-
     @media (max-width: 768px) {
-      header {
-        flex-direction: column;
-        align-items: center;
-        padding: 10px 20px;
-      }
-
-      .logo-img {
-        height: 120px;
-        width: auto;
-        margin: 0;
-      }
-
       .menu-toggle {
         display: block;
-        position: absolute;
-        top: 25px;
-        right: 20px;
-        z-index: 1001;
+        font-size: 28px;
+        color: #ABFF25;
+        cursor: pointer;
+        z-index: 1002;
       }
 
       nav ul.navbar {
         display: none;
-        flex-direction: column;
-        gap: 15px;
-        background-color: #000;
-        position: absolute;
-        top: 70px;
-        right: 0;
-        width: 100%;
+      }
+
+      .sidebar {
+        position: fixed;
+        top: 0;
+        left: -100%;
+        width: 80%;
+        height: 100%;
+        background: #ABFF25;
+        color: black;
+        z-index: 1001;
+        transition: left 0.3s ease;
         padding: 20px;
-        z-index: 1000;
+        display: block;
       }
 
-      nav ul.navbar.active {
+      .sidebar.active {
+        left: 0;
+      }
+
+      .sidebar .close-btn {
+        font-size: 26px;
+        color: black;
+        background: white;
+        border-radius: 8px;
+        width: 35px;
+        height: 35px;
         display: flex;
-      }
-
-      .hero {
-        flex-direction: column;
-        text-align: center;
-        padding: 30px 20px;
-      }
-
-      .hero-image img {
-        width: 90%;
-        margin-top: 20px;
-      }
-
-      .hero-text h1 {
-        font-size: 2.5rem;
-      }
-
-      .services .card {
-        width: 90%;
-      }
-
-      .about-content,
-      .why-container,
-      .footer-container,
-      .footer-links,
-      .faq-container {
-        flex-direction: column;
         align-items: center;
-        gap: 20px;
+        justify-content: center;
+        cursor: pointer;
+        margin-left: auto;
+        margin-bottom: 20px;
       }
 
-      .projects-section,
-      .approach-section,
-      .benefits-section,
-      .skill-section {
-        padding: 40px 20px;
+      .sidebar ul {
+        list-style: none;
+        padding: 0;
+      }
+
+      .sidebar ul li {
+        margin: 20px 0;
+        font-size: 18px;
+        font-weight: 600;
+      }
+
+      .sidebar ul li a {
+        color: black;
+        text-decoration: none;
       }
     }
   </style>
@@ -101,7 +81,7 @@
     <div class="logo-container">
       <img  class="logo-img" src="assets/vdv fulllogo.png" alt="Vinayaka Digiverse Logo" />
     </div>
-<div class="menu-toggle" onclick="toggleMenu()">☰</div>
+<div class="menu-toggle" onclick="toggleSidebar()">☰</div>
 <nav>
   <ul class="navbar" id = "navbar">
     <li><a href="index.html">Home</a></li>
@@ -173,6 +153,21 @@
     <li><a href="Contact us/contact.html">Get in touch</a></li>
   </ul>
 </nav>
+
+    
+    <!-- Mobile Sidebar -->
+    <div class="sidebar" id="sidebar">
+      <div class="close-btn" onclick="toggleSidebar()">✕</div>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about-us.html">About Us</a></li>
+        <li><a href="#">Solutions</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="blogs.html">Blogs</a></li>
+        <li><a href="pricing.html">Pricing</a></li>
+        <li><a href="contact.html">Get in touch</a></li>
+      </ul>
+    </div>
   </header>
 
   <section class="hero">
@@ -717,9 +712,9 @@ that meet your business needs.
     </div></a>
   </div>
 </footer>
-<script>
-    function toggleMenu() {
-      document.getElementById('navbar').classList.toggle('active');
+ <script>
+    function toggleSidebar() {
+      document.getElementById('sidebar').classList.toggle('active');
     }
   </script>
 
