--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,18 @@
         text-decoration: none;
       }
     }
+  /* Hide sidebar completely on desktop */
+.sidebar {
+  display: none;
+}
+
+/* Show sidebar only on mobile */
+@media (max-width: 768px) {
+  .sidebar {
+    display: block;
+  }
+}
+
   </style>
 </head>
 <body>
